RESOLVED FIXED306984
REGRESSION(306393@main): FocusController should not go into <select>'s shadow tree
https://bugs.webkit.org/show_bug.cgi?id=306984
Summary REGRESSION(306393@main): FocusController should not go into <select>'s shadow...
Diego De La Toba
Reported 2026-02-04 13:43:37 PST
3x fast tests are a constant crash on IOS Debug fast/canvas/fallback-content.html fast/rendering/render-style-null-optgroup-crash.html fast/dom/HTMLProgressElement/progress-element-with-child-crash.html HISTORY: https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&test=fast%2Frendering%2Frender-style-null-optgroup-crash.html&test=fast%2Fdom%2FHTMLProgressElement%2Fprogress-element-with-child-crash.html&test=fast%2Fcanvas%2Ffallback-content.html REPRODUCTION: I was able to reproduce with the following on IOS26.2 ToT: rwt --child-processes=1 --ios-simulator --force --no-retry --exit-after-n-crashes-or-timeouts=1 --iterations 10 <TEST> I am going to mark expectations as pass fail while this pends investigation.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-04 13:43:43 PST
Diego De La Toba
Comment 2 2026-02-04 13:49:44 PST
EWS
Comment 3 2026-02-04 13:52:13 PST
Test gardening commit 306808@main (b5c614dfab11): <https://commits.webkit.org/306808@main> Reviewed commits have been landed. Closing PR #57884 and removing active labels.
Alexey Proskuryakov
Comment 4 2026-02-05 08:25:26 PST
ASSERTION FAILED: !is<Element>(currentNode) || !isNonFocusableScopeOwner(downcast<Element>(*currentNode), focusEventData) /Volumes/Data/worker/Apple-iOS-26-Simulator-Debug-Build/build/Source/WebCore/page/FocusController.cpp(752) : FocusableElementSearchResult WebCore::FocusController::findFocusableElementAcrossFocusScope(FocusDirection, const FocusNavigationScope &, Node *, const FocusEventData &, ShouldFocusElement) 1 0x34dfe3a0c WebCore::FocusController::findFocusableElementAcrossFocusScope(WebCore::FocusDirection, WebCore::FocusNavigationScope const&, WebCore::Node*, WebCore::FocusEventData const&, WebCore::ShouldFocusElement) 2 0x34dfe50e0 WebCore::FocusController::nextFocusableElement(WebCore::Node&) 3 0x135275970 WebKit::nextAssistableElement(WebCore::Node*, WebCore::Page&, bool) 4 0x13525930c WebKit::WebPage::focusedElementInformation() 5 0x13656ea3c WebKit::WebPage::elementDidFocus(WebCore::Element&, WebCore::FocusOptions const&) 6 0x13634ab20 WebKit::WebChromeClient::elementDidFocus(WebCore::Element&, WebCore::FocusOptions const&) 7 0x34ce62f60 WebCore::Element::dispatchFocusEvent(WTF::RefPtr<WebCore::Element, WTF::RawPtrTraits<WebCore::Element>, WTF::DefaultRefDerefTraits<WebCore::Element>>&&, WebCore::FocusOptions const&) 8 0x34d4e242c WebCore::HTMLSelectElement::dispatchFocusEvent(WTF::RefPtr<WebCore::Element, WTF::RawPtrTraits<WebCore::Element>, WTF::DefaultRefDerefTraits<WebCore::Element>>&&, WebCore::FocusOptions const&) 9 0x34ccf8c2c WebCore::Document::setFocusedElement(WebCore::Element*, WebCore::FocusOptions const&, WebCore::BroadcastFocusedElement) 10 0x34dfd32d8 WebCore::FocusController::setFocusedElement(WebCore::Element*, WebCore::Frame*, WebCore::FocusOptions const&, WebCore::BroadcastFocusedElement) 11 0x34ce6240c WebCore::Element::focus(WebCore::FocusOptions const&) 12 0x34d3b1a5c WebCore::HTMLFormControlElement::runFocusingStepsForAutofocus() 13 0x34ccf9868 WebCore::Document::flushAutofocusCandidates() 14 0x34e1aafa0 WebCore::Page::updateRendering()::$_3::operator()(WebCore::Document&) const 15 0x34e1aaf3c WTF::Detail::CallableWrapper<WebCore::Page::updateRendering()::$_3, void, WebCore::Document&>::call(WebCore::Document&) 16 0x34d001c48 WTF::Function<void (WebCore::Document&)>::operator()(WebCore::Document&) const 17 0x34e15093c WebCore::Page::forEachRenderableDocument(WTF::Function<void (WebCore::Document&)> const&) const 18 0x34e154080 WebCore::Page::updateRendering()::$_22::operator()(WebCore::RenderingUpdateStep, WTF::Function<void (WebCore::Document&)> const&) const 19 0x34e153adc WebCore::Page::updateRendering() 20 0x136563a14 WebKit::WebPage::updateRendering() 21 0x13291c4f0 WebKit::RemoteLayerTreeDrawingArea::updateRendering() 22 0x13291f734 WebKit::RemoteLayerTreeDrawingArea::updateRenderingWithForcedRepaint() 23 0x1365628b4 WebKit::WebPage::updateRenderingWithForcedRepaintWithoutCallback() 24 0x1360dbc84 WKBundlePageForceRepaint 25 0x117032bf0 WTR::InjectedBundlePage::dump() 26 0x117036260 WTR::dumpAfterWaitAttributeIsRemoved(OpaqueWKBundlePage const*)
Anne van Kesteren
Comment 5 2026-02-09 03:55:09 PST
EWS
Comment 6 2026-02-09 09:55:36 PST
Committed 307086@main (9d44f6617b06): <https://commits.webkit.org/307086@main> Reviewed commits have been landed. Closing PR #58193 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.