REGRESSION(306393@main): FocusController should not go into <select>'s shadow tree https://bugs.webkit.org/show_bug.cgi?id=306984 rdar://169650269

Reviewed by Ryosuke Niwa.

The FocusController gets confused about <select>'s shadow tree, but
there's no need to traverse it as all the focusable elements are
descendants.

Canonical link: https://commits.webkit.org/307086@main